Fix my account dropdown Work to fix the issue of the navigation dropdown menu sitting behind the sign up banner in trial mode.

--- a/app/javascript/styles/custom/_onboarding.scss
+++ b/app/javascript/styles/custom/_onboarding.scss
@@ -171,7 +171,7 @@
   position: fixed;
   display: inline;
   width: 100%;
-  z-index: 100;
+  z-index: 10;
   color: $white;
   background-image: linear-gradient(to bottom right, $dodger-blue, $blue);
   border-bottom: 1px solid $ghost-white;
